[package]
name = "spectro"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
circular-buffer = "1.1.0"
clap = { version = "4.5.35", features = ["derive"] }
convolutions-rs = "0.3.4"
csv = "1.3.1"
hound = "3.5.1"
interp = "2.0.2"
ndarray = { version = "0.15", features = ["serde"] }
num-traits = "0.2.19"
plotly = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
smartcore = { version = "0.4.0", features = ["serde", "ndarray-bindings"] }
spectrum-analyzer = "1.6.0"
