[package]
name = "spectro"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.1.0"
clap = { version = "4.5.35", features = ["derive"] }
csv = "1.3.1"
hound = "3.5.1"
interp = "2.0.2"
ndarray = { version = "0.16", features = ["serde"] }
ndarray-conv = "0.4.1"
num-traits = "0.2.19"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
plotly = "0.12.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
smartcore = { version = "0.4.0", features = ["serde", "ndarray-bindings"] }
spectrum-analyzer = "1.6.0"
