[package]
name = "spectro"
version = "0.1.0"
edition = "2024"

[dependencies]
circular-buffer = "1.1.0"
clap = { version = "4.5.35", features = ["derive"] }
csv = "1.3.1"
flexi_logger = "0.30.1"
hound = "3.5.1"
log = "0.4.27"
# interp = "2.0.2"
ndarray = "0.16"
ndarray-conv = "0.4.1"
# num-traits = "0.2.19"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
plotly = "0.12.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
spectrum-analyzer = "1.6.0"
tungstenite = "0.26.2"
